<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <FrameLayout
        android:id="@+id/fl_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_gravity="center|bottom"
            android:src="@drawable/user"
            android:scaleType="fitXY"/>

    </FrameLayout>
    <TextView
        android:id="@+id/tv_fullname_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/fl_profile"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fullname_profile"
        android:text="@string/aulia"
        android:layout_marginLeft="@dimen/_40dp"/>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_05dp"
        android:layout_below="@+id/tv_name_profile"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginRight="@dimen/_5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@android:color/darker_gray"/>


    <TextView
        android:id="@+id/tv_fullemail_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/view1"
        android:text="@string/emailis"/>
    <TextView
        android:id="@+id/tv_email_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fullemail_profile"
        android:text="@string/aulemail"
        android:layout_marginLeft="@dimen/_40dp"/>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_05dp"
        android:layout_below="@+id/tv_email_profile"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginRight="@dimen/_5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@android:color/darker_gray"/>


    <TextView
        android:id="@+id/tv_fullhp_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/view2"
        android:text="@string/hpis"/>
    <TextView
        android:id="@+id/tv_hp_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fullhp_profile"
        android:text="@string/hp"
        android:layout_marginLeft="@dimen/_40dp"/>
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_05dp"
        android:layout_below="@+id/tv_hp_profile"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginRight="@dimen/_5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@android:color/darker_gray"/>
    <Button
        android:id="@+id/btn_signout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_below="@+id/view3"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginRight="@dimen/_40dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

</RelativeLayout>