<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <ImageView
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30dp" />
    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_38sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginStart="@dimen/_60dp"
        android:layout_marginEnd="@dimen/_60dp"/>
    <EditText
        android:id="@+id/et_name_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/nama"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/email"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/et_hp_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/hp"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/et_password_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/password"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/et_confirm_password_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"/>
    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/background2"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"/>
</LinearLayout>