<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">
                <ImageView
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:src="@drawable/pin"/>
                <TextView
                    android:id="@+id/tv_home_awal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dari_mana"
                    android:lines="2"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:textSize="@dimen/_15sp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_05dp"
                android:layout_marginLeft="@dimen/_40dp"
                android:layout_marginRight="@dimen/_20dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">
                <ImageView
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:src="@drawable/placeholder"/>
                <TextView
                    android:id="@+id/tv_home_tujuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mau_kemana"
                    android:lines="2"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:textSize="@dimen/_15sp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home_bottom"
        android:layout_above="@id/btn_home_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:src="@drawable/wallet"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15dp"
                    android:textStyle="bold"
                    android:text="@string/harga"
                    android:padding="@dimen/_5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_home_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25dp"
                android:text="@string/rp_50_000"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_05dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:src="@drawable/clock"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15dp"
                    android:padding="@dimen/_5dp"
                    android:textStyle="bold"
                    android:text="@string/estimasi_waktu"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_home_name_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_5dp"
                android:text="@string/_3_menit"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_home_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:text="@string/pesan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>